--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongoose": "^8.4.0"
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
