--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
