--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "list.js": "^2.3.1",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
