--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "sequencejs": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
