--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "sequencejs": "^2.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "eslint": "^9.4.0",
+    "globals": "^15.4.0",
     "nodemon": "^3.1.2"
   }
 }
